--- a/site/simplepass/1.1.0-Beta/tutorial-README.html
+++ b/site/simplepass/1.1.0-Beta/tutorial-README.html
@@ -27,56 +27,15 @@
 </header>
 
 <article>
-    <blockquote>
-<p><strong>CAUTION</strong></p>
-<p>This project is in Beta Phase. Some features may still contain a few bugs.</p>
-</blockquote>
-<ul>
-<li><a href="#about">About</a></li>
-<li><a href="#available-modifiers">Available Modifiers</a></li>
-<li><a href="#documentation">Documentation</a></li>
-</ul>
-<h2>About</h2>
-<p>simplePass is a JavaScript password generator.</p>
-<h2>Available Modifiers</h2>
-<p><strong>General Modifiers</strong></p>
-<ul>
-<li>Length - Adjusts the length of the the password.</li>
-<li>Exclude Characters - Any characters the password should not contain.</li>
-</ul>
-<p><strong>Basic Latin Modifiers</strong></p>
-<ul>
-<li>Lowercase - Includes Basic Latin lowercase characters [a-z].</li>
-<li>Uppercase - Includes Basic Latin uppercase characters [A-Z].</li>
-<li>Numbers - Includes Basic Latin numerals [0-9].</li>
-<li>Punctuation - Includes Basic Latin punctuation.</li>
-</ul>
-<p><strong>White-space Modifiers</strong></p>
-<ul>
-<li>Whitespace Between - Include whitespace in the middle of the password
-<ul>
-<li>Whitespace Between Limit - Set the number of whitespace characters to include in the middle of the password.</li>
-</ul>
-</li>
-<li>Whitespace Beginning - Chance for password to contain whitespace in the beginning.
-<ul>
-<li>White Beginning Required - Require whitespace characters in the beginning of the password.</li>
-</ul>
-</li>
-<li>Whitespace Beginning - Chance for password to contain whitespace in the end.
-<ul>
-<li>White Beginning Required - Require whitespace characters in the end of the password.</li>
-</ul>
-</li>
-</ul>
-<h2>Documentation</h2>
-<ul>
-<li><strong><a href="installation-and-examples">Installation &amp; Examples</a></strong></li>
-<li><strong><a href="development">Development</a></strong></li>
-<li><strong><a href="CODE_OF_CONDUCT">Code Of Conduct</a></strong></li>
-<li><strong><a href="CONTRIBUTING">Contributing</a></strong></li>
-<li><strong><a href="SECURITY">Security</a></strong></li>
-</ul>
+    <h2 id="generating-typeface-fonts">Generating Typeface Fonts</h2>
+<p>The default template uses the <a href="https://www.google.com/fonts/specimen/Open+Sans">OpenSans</a> typeface. The font files can be regenerated as follows:</p>
+<ol>
+<li>Open the <a href="http://www.fontsquirrel.com/fonts/open-sans">OpenSans page at Font Squirrel</a>.</li>
+<li>Click on the 'Webfont Kit' tab.</li>
+<li>Either leave the subset drop-down as 'Western Latin (Default)', or, if we decide we need more glyphs, than change it to 'No Subsetting'.</li>
+<li>Click the 'DOWNLOAD @FONT-FACE KIT' button.</li>
+<li>For each typeface variant we plan to use, copy the 'eot', 'svg' and 'woff' files into the 'templates/default/static/fonts' directory.</li>
+</ol>
 </article>
 
 </section>
@@ -84,7 +43,7 @@
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-README.html">README</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-bug_report.html">Bug Report</a></li><li><a href="tutorial-feature_request.html">feature_request</a></li><li><a href="tutorial-refactor_request.html">refactor_request</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">installation-and-examples</a></li><li><a href="tutorial-README.html">README</a></li></ul>
 </nav>
 
 <br class="clear">
