--- a/site/simplepass/1.1.0-Beta/tutorial-SECURITY.html
+++ b/site/simplepass/1.1.0-Beta/tutorial-SECURITY.html
@@ -27,8 +27,8 @@
 </header>
 
 <article>
-    <h1>Security Policy</h1>
-<h2>Supported Versions</h2>
+    <h1 id="security-policy">Security Policy</h1>
+<h2 id="supported-versions">Supported Versions</h2>
 <p>The following table outlines our supported versions for security fixes and reports.</p>
 <table>
 <thead>
@@ -48,7 +48,7 @@
 </tr>
 </tbody>
 </table>
-<h2>Reporting a Vulnerability</h2>
+<h2 id="reporting-a-vulnerability">Reporting a Vulnerability</h2>
 <p>If you believe you have found a vulnerability in this program please contact one of the following maintainers at their mailing address provided:</p>
 <ul>
 <li>staticBanter[Owner] - staticbanter@staticblogs.ca</li>
@@ -56,61 +56,8 @@
 <p>Your message should follow this format</p>
 <ol>
 <li>The message title needs to include the phrase &quot;simplePass Vulnerability&quot;</li>
-<li>The message body should be formatted as follows:</li>
+<li>The message body should follow the same format as a <em>Bug Report</em> but change the title too <em>Security Report</em>. To find the Bug Report template please visit the <a href="https://github.com/staticBanter/simplePass/blob/main/.github/ISSUE_TEMPLATE/bug_report.md">simplePass GitHub Bug Report Issue Template</a></li>
 </ol>
-<pre class="prettyprint source lang-markdown"><code>[AFFECTED VERSION #]
-
-&lt;!--
-IF related to specific browser/run-time environment.
-List the affected environments.
--->
-* [AFFECTED BROWSER]
-* [AFFECTED RUN-TIME]
-&lt;!--
-ELSE
--->
-**ALL**
-&lt;!---->
-
-[DESCRIPTION OF HOW THE VULNERABILITY WAS DISCOVERED AND HOW TO REPLICATE]
-
-&lt;!--
-IF you know what files are causing the issue
-List the affected files by name, and sub-list their line numbers.
--->
-* [AFFECTED FILE] - [LINE NUMBER(Start)] : [LINE NUMBER(End)]
-* [AFFECTED FILE] -
-  * [LINE NUMBER(Start)] : [LINE NUMBER(End)]
-  * [LINE NUMBER(Start)] : [LINE NUMBER(End)]  
-&lt;!--
-ELSE
--->
-**Debugging Needed**
-&lt;!---->
-
-&lt;!--
-OPTIONAL
--->
-[DESCRIPTION OF PURPOSED SOLUTIONS]
-&lt;!---->
-
-&lt;!--
-OPTIONAL
--->
-[LIST OF ALTERNATIVE CONTACT INFORMATION]
-&lt;!---->
-
-&lt;!--
-OPTIONAL
-If you would like public credit for you discovery please provide some extra information so we can recognize you properly.
-Please note that you do not need to fill out all of these fields.
-If you wish to remain anonymous when reporting you may do so by removing this section or not modifying it.
--->
-[WEB HANDLE OR NAME]
-[ORGANIZATION OR GROUP]
-[CONTACT INFORMATION]
-&lt;!---->
-</code></pre>
 <p>If you do not get a response within 7-days we ask that you please send us another email after 1-week and continue to do so until we respond.</p>
 <p>We ask the following of you during this time</p>
 <ul>
@@ -119,7 +66,8 @@ If you wish to remain anonymous when reporting you may do so by removing this se
 </ul>
 <p>If you do not hear from any of the maintainers for over 1-month <strong>OR</strong> 3-weeks <strong>AND</strong> after a minimum of 2 repeated email reports from your initial email (totalling 3 reports), we ask that you post an issue on GitHub following the same format as above. You will also be free to disclose the vulnerability to other entities as well. This is a last resort effort to at least alert the community to issues.</p>
 <p>If we respond to your report we will be as honest and open as we can about how we are going to approach the situation and how long it may take us to solve it. We ask that you respect our honesty and do not share any information that we will disclose with you until we approve.</p>
-<p><sub>Thank you for taking the time to read this report. If you have any questions comments or concerns regarding this report please contact staticBanter via email at staticbanter@staticblogs.ca.</sub></p>
+<hr>
+<p><sub>Thank you for taking the time to read this document. If you have any questions comments or concerns regarding this report open an issue on the <a href="https://github.com/staticBanter/simplePass/issues">simplePass GitHub Issue Tracker</a></sub></p>
 </article>
 
 </section>
@@ -127,7 +75,7 @@ If you wish to remain anonymous when reporting you may do so by removing this se
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-README.html">README</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
 </nav>
 
 <br class="clear">
