--- a/site/simplepass/1.1.0-Beta/tutorial-development.html
+++ b/site/simplepass/1.1.0-Beta/tutorial-development.html
@@ -66,7 +66,7 @@
 </ul>
 </li>
 </ul>
-<h2>Contributing</h2>
+<h2 id="contributing">Contributing</h2>
 <p>Please note that if you are planning to contribute to the project you will be required to use the following tools for development:</p>
 <ul>
 <li>Git &amp; GitHub</li>
@@ -83,9 +83,9 @@
 </ul>
 <p>If you feel like a new tool should be included in the tool-set feel free to open a <em>Refactoring Issue</em> and we will begin looking into it.</p>
 <p>Please note that you planning to contribute to the project you will be required to use the include config and package files.</p>
-<h2>Download Or Clone</h2>
+<h2 id="download-or-clone">Download Or Clone</h2>
 <p>Before you can begin working on the program you will need to get a copy of the files. Currently, simplePass is begin collaborated and distributed through GitHub, please navigate to <a href="https://github.com/staticBanter/simplePass">the simplePass repository</a>. Once here you can either clone the GitHub Repository or Download the Zip by click the <em>Code</em> button.</p>
-<h2>Developing With JavaScript</h2>
+<h2 id="developing-with-javascript">Developing With JavaScript</h2>
 <p>If you wish to work on simplePass in pure JavaScript then their is no modification of code or other tools that are required to begin.</p>
 <p>If you prefer your project in one single file you may take the <code>simplePass/browser/simplePass.js</code> file.
 This file is the entire program bundled into one file.</p>
@@ -103,7 +103,7 @@ This directory contains all the JavaScript module files that create the program.
 <li><a href="https://github.com/jsdoc/jsdoc#installation-and-usage">JSDoc</a> - JavaScript Doc-Comment documentation generator.</li>
 </ul>
 <p>If you choose any of these tools and need help configuring them please see <em><a href="#setting-up-the-environment">Setting Up The Environment</a></em></p>
-<h2>Developing With TypeScript</h2>
+<h2 id="developing-with-typescript">Developing With TypeScript</h2>
 <p>This is the recommended method for development on the project.</p>
 <p>To begin it is required that you take the following directories and files from the repo and put them under a directory named simplePass:</p>
 <ul>
@@ -140,7 +140,7 @@ The following tools are recommended for development of the project:</p>
 <ul>
 <li><a href="https://github.com/jsdoc/jsdoc#installation-and-usage">JSDoc</a> - JavaScript Doc-Comment documentation generator.</li>
 </ul>
-<h2>Setting Up The Environment.</h2>
+<h2 id="setting-up-the-environment.">Setting Up The Environment.</h2>
 <blockquote>
 <p><strong>Note</strong>: Please note that we will not be demonstrating how to install or <em>configure</em> any of the recommended tools on your system, the following will assume you already have the tools installed and are able to run the required commands.
 The following is demonstrating what configuration options should be set and what commands to run.</p>
@@ -149,10 +149,10 @@ The following is demonstrating what configuration options should be set and what
 <blockquote>
 <p><strong>Note</strong>: All of the following commands should be executed in the projects working directory.</p>
 </blockquote>
-<h3>Node.js &amp; NPM</h3>
+<h3 id="node.js-%26-npm">Node.js &amp; NPM</h3>
 <p>Currently, all of the tools in the tool-set can be run using NPM and the <code>npm run</code> command. Therefore it is highly recommended that you use Node.js and NPM for your development environment.</p>
-<h4>Using The Included Files</h4>
-<h5>Javascript</h5>
+<h4 id="using-the-included-files">Using The Included Files</h4>
+<h5 id="javascript">Javascript</h5>
 <p>If you decided to use the included <code>package.json</code> file and want to develop in Javascript there are some slight modifications to the file that can be made to remove unneeded packages.
 Please open the file and:</p>
 <ol>
@@ -169,10 +169,10 @@ Please open the file and:</p>
 <li>tsc-watch</li>
 </ol>
 <p>Once we have cleaned up our package.json file we may install our packages by running the <code>npm install</code> command.</p>
-<h5>Typescript</h5>
+<h5 id="typescript">Typescript</h5>
 <p>If you decided to use the included <code>package.json</code> file and want to develop in TypeScript there are no modifications needed to the file.</p>
 <p>You may proceed to run the <code>npm install</code> command.</p>
-<h4>Using Your Own Files</h4>
+<h4 id="using-your-own-files">Using Your Own Files</h4>
 <p>If you decided to use your own <code>package.json</code> file no problem.</p>
 <p>If you choose you may install the optional tools:</p>
 <pre class="prettyprint source lang-bash"><code># Webpack & Webpack-CLI - Needed to bundle files.
@@ -181,14 +181,14 @@ npm install --save-dev webpack webpack-cli
 <pre class="prettyprint source lang-bash"><code># JSDoc - Needed to auto-generate documentation files.
 npm install --save-dev jsdoc
 </code></pre>
-<h5>Javascript</h5>
+<h5 id="javascript-1">Javascript</h5>
 <p>Because all the development tools for JavaScript are completely optional there is not need to install any packages.</p>
-<h5>Typescript</h5>
+<h5 id="typescript-1">Typescript</h5>
 <p>If you choose to develop in Typescript you will need the following to include to following packages.</p>
 <pre class="prettyprint source lang-bash"><code># TypeScript - Needed to transpile TypeScript files.
 npm install --save-dev typescript
 </code></pre>
-<h4>Creating The Files</h4>
+<h4 id="creating-the-files">Creating The Files</h4>
 <p>If want to create a new <code>package.json</code> file run the <code>npm init</code> command. This will create the file in your working directory. Once you have created the file, ensure you overview the <a href="">NPM package.json Documentation</a> to ensure to have all the proper attributes configured to your liking.</p>
 <p>If you like you may now install any optional packages by running the following commands:</p>
 <pre class="prettyprint source lang-bash"><code># Webpack & Webpack-CLI - Needed to bundle files.
@@ -197,15 +197,15 @@ npm install --save-dev webpack webpack-cli
 <pre class="prettyprint source lang-bash"><code># JSDoc - Needed to auto-generate documentation files.
 npm install --save-dev jsdoc
 </code></pre>
-<h5>JavaScript</h5>
+<h5 id="javascript-2">JavaScript</h5>
 <p>Other than installing your desired packages there are not other steps needed.</p>
-<h5>TypeScript</h5>
+<h5 id="typescript-2">TypeScript</h5>
 <p>Developing in TypeScript requires the following packages to be installed.</p>
 <pre class="prettyprint source lang-bash"><code># TypeScript - Needed to transpile TypeScript files.
 npm install --save-dev typescript
 </code></pre>
 <p>For a complete understanding of Node.js  and NPM please visit their respective documentation pages at <a href="https://nodejs.org/docs/">Node.js | Docs</a>, <a href="https://nodejs.org/knowledge/getting-started/npm/what-is-npm/">Node.js | Getting Started | What Is NPM</a> and <a href="https://docs.npmjs.com/">NPM | Docs</a>.</p>
-<h3>JSDoc</h3>
+<h3 id="jsdoc">JSDoc</h3>
 <p>If you decided to use JSDoc and continue creating the documentation, we recommend you use the include JSDoc config file with the project, also keeping the <code>docs/</code> directory structure intact and following the same format (Unless you have a deep understanding of JSDoc). Finally we also recommend including the following command in your <code>package.json</code> <em>script</em> attribute</p>
 <pre class="prettyprint source lang-bash"><code># Run jsdoc in the 'simplePass' directory, include tutorials from 'docs/markdown/', run with the following configuration options.
 &quot;docs-build&quot;: &quot;jsdoc ./simplePass --tutorials ./docs/markdown --configure ./jsdoc.config.json&quot;
@@ -214,38 +214,17 @@ npm install --save-dev typescript
 TODO: Insert links to documentation pages here
 -->
 <p>For a complete understanding of JSDoc please visit its documentation pages at <a href="https://jsdoc.app/">JSDoc</a>.</p>
-<h4>Adding Additional Markdown Files.</h4>
+<h4 id="adding-additional-markdown-files.">Adding Additional Markdown Files.</h4>
 <p>To add additional Markdown files to the documentation add a markdown file with the name of your choosing to the <code>docs/</code> directory.</p>
-<p>JSDocs provides some configurations that explains the linking of the files and you may customize these attributes to your liking in the <code>docs/jsdoc.config.json</code> file. The documentation for this file can be found at <a href="https://jsdoc.app/about-configuring-jsdoc.html">JSDoc | About Configuring JSDoc</a>.</p>
-<p>Linking from one file to anther is done like so;</p>
-<pre class="prettyprint source lang-bash"><code># Directory Structure
-| +-- docs/
-| | +-- main.md
-| | +-- example.md
-| | +-- sub_dir/
-| | | +-- sub-file.md
-</code></pre>
-<p>If you would like to create a link inside of <code>main.md</code> linking to <code>example.md</code>. You would preform the following:</p>
-<pre class="prettyprint source lang-md"><code>&lt;!-- Link inside of main.md linking to example.md -->
-[link to example](./tutorial-example.html)
-</code></pre>
-<pre class="prettyprint source lang-md"><code>&lt;!-- Link inside of main.md linking to sub_file.md -->
-[link to sub-file](./sub_dir/tutorial-sub-file.html)
-</code></pre>
-<p>Notice how the following:</p>
-<ol>
-<li>The files are still relatively linked. This is because JSDoc maintains the copied directory structure.</li>
-<li>The files all got prefixed with <em>tutorial</em> this is a limitation of the JSDoc program and is suppressed in the final documentation output due to some minor modifications to the default JSDoc template (but it's still there behind the scenes).</li>
-<li>The <code>.md</code> extension gets replaced with a <code>.html</code> one.</li>
-</ol>
-<h3>Webpack</h3>
+<p>JSDocs provides some configurations that explains how the documenation hieracrhy should be structured and the names of the files, you may customize these attributes to your liking in the <code>docs/jsdoc.config.json</code> file. The documentation for this file can be found at <a href="https://jsdoc.app/about-tutorials.html">JSDoc | About Configuring JSDoc</a>.</p>
+<h3 id="webpack">Webpack</h3>
 <p>If you decide to use Webpack for bundling we recommend you use the included <code>webpack.config.js</code> file unless you have an understanding of Webpack.</p>
 <p>We also recommend include this command in your <code>package.json</code>;</p>
 <pre class="prettyprint source lang-bash"><code># Run Webpack in build mode with the following configuration
 &quot;webpack-build&quot;: &quot;webpack build --config webpack.config.js&quot;
 </code></pre>
 <p>For a complete understanding of Webpack please visit its documentation pages at <a href="https://webpack.js.org/guides/">Webpack | Guides</a>.</p>
-<h3>TypeScript</h3>
+<h3 id="typescript-3">TypeScript</h3>
 <p>If you decide to use TypeScript for transpliling we recommend you use the included <code>tsconfig.json</code> file unless you have an understanding of TypeScript.</p>
 <p>We also recommend you include the following commands in your <code>package.json</code>;</p>
 <pre class="prettyprint source lang-bash"><code># Run the TypeScript compiler in production mode and watch the working directory for changes.
@@ -255,6 +234,8 @@ TODO: Insert links to documentation pages here
 &quot;tsc&quot;: &quot;tsc --project .&quot;,
 </code></pre>
 <p>For a complete understanding of TypeScript please visit its documentation pages at <a href="https://www.typescriptlang.org/docs/">TypeScript | Docs</a>.</p>
+<hr>
+<p><sub>Thank you for taking the time to read this document. If you have any questions comments or concerns regarding this report open an issue on the <a href="https://github.com/staticBanter/simplePass/issues">simplePass GitHub Issue Tracker</a></sub></p>
 </article>
 
 </section>
@@ -262,7 +243,7 @@ TODO: Insert links to documentation pages here
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-README.html">README</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
 </nav>
 
 <br class="clear">
