--- a/site/simplepass/1.1.0-Beta/tutorial-installation-and-examples.html
+++ b/site/simplepass/1.1.0-Beta/tutorial-installation-and-examples.html
@@ -31,8 +31,9 @@
 <li><a href="#browserjavascript">Browser/Javascript</a></li>
 <li><a href="#typescript">Typescript</a></li>
 </ul>
-<p>simplePass is currently only available through its GitHub at <a href=""></a>, there you can download the entire project repo.</p>
-<h2>Browser/Javascript</h2>
+<p>simplePass is currently only available through its GitHub at <a href="https://github.com/staticBanter/simplePass">GitHub | staticBanter | simplePass</a>, there you can download the entire project repo.</p>
+<p>simplePass is built using <em>ESNext</em> modules so you will need deployed it in a server environment.</p>
+<h2 id="browser%2Fjavascript">Browser/Javascript</h2>
 <p>For usage inside of a Web Browser it is recommend that you grab the bundled version of the project located at <code>simplePass/simplePass/browser/simplePass.js</code>. Once you have the file you may include it in you project like so:</p>
 <p>Directory structure after downloading the <em>simplePass.js</em> file.</p>
 <pre class="prettyprint source"><code>.
@@ -167,7 +168,7 @@ console.log(complexPass)
 console.log(config.passwordLengthMin)
 
 </code></pre>
-<h2>Typescript</h2>
+<h2 id="typescript">Typescript</h2>
 <p>Installing the TypeScript version of the project is similar to installing the Browser/JavaScript versions only we need to grab a different directory.</p>
 <p>If you would like to use the TypeScript versions of simplePass (usually for personal development) you should take the entire <code>simplePass/src</code> directory, and rename it to something more unique (ie: <em>simplePass</em>). Once you have the directory you may include it in your project like so:</p>
 <p>Directory structure after downloading and renaming the <code>src</code> directory (for this example we renamed <code>src</code> to <code>simplePass</code>).</p>
@@ -175,15 +176,15 @@ console.log(config.passwordLengthMin)
 +-- yourProjectsMainDir/
 | +-- index.html
 | +-- css/
-| +-- js/
+| +-- ts/
 | | +-- simplePass/
 | | | +-- data/
 | | | +-- helpers/
-| | | +-- config.simplePass.js
-| | | +-- simplePass.js
-| | +-- yourProjectScript.js
+| | | +-- config.simplePass.ts
+| | | +-- simplePass.ts
+| | +-- yourProjectScript.ts
 </code></pre>
-<p>Including <em>simplePass.js</em> in <em>yourProjectScript.js</em></p>
+<p>Including <em>simplePass.ts</em> in <em>yourProjectScript.ts</em></p>
 <pre class="prettyprint source lang-javascript"><code>// yourProjectScript.js
 
 // Import simplePass
@@ -241,6 +242,8 @@ console.log(complexPass)
 console.log(config.passwordLengthMin)
 
 </code></pre>
+<hr>
+<p><sub>Thank you for taking the time to read this document. If you have any questions comments or concerns regarding this report open an issue on the <a href="https://github.com/staticBanter/simplePass/issues">simplePass GitHub Issue Tracker</a></sub></p>
 </article>
 
 </section>
@@ -248,7 +251,7 @@ console.log(config.passwordLengthMin)
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-README.html">README</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-E_errors.html">E_errors</a></li><li><a href="module-L_allowedModifiers.html">L_allowedModifiers</a></li><li><a href="module-L_requiredAttributes.html">L_requiredAttributes</a></li><li><a href="module-L_useableAttributes.html">L_useableAttributes</a></li><li><a href="module-L_whitespaceAttributes.html">L_whitespaceAttributes</a></li><li><a href="module-characterCodeConstraints.html">characterCodeConstraints</a></li><li><a href="module-cleanModifier.html">cleanModifier</a></li><li><a href="module-config.html">config</a></li><li><a href="module-createMessage.html">createMessage</a></li><li><a href="module-createModifierList.html">createModifierList</a></li><li><a href="module-generateCharCode.html">generateCharCode</a></li><li><a href="module-shuffle.html">shuffle</a></li><li><a href="module-simplePass.html">simplePass</a></li><li><a href="module-validateModifier.html">validateModifier</a></li></ul><h3>Interfaces</h3><ul><li><a href="I_charCodeGenerationFlag.html">I_charCodeGenerationFlag</a></li><li><a href="I_charCodeOptions.html">I_charCodeOptions</a></li><li><a href="I_charCodeRequest.html">I_charCodeRequest</a></li><li><a href="I_passwordModifier.html">I_passwordModifier</a></li><li><a href="module-characterCodeConstraints-I_charCodeConstraintsAttributes.html">I_charCodeConstraintsAttributes</a></li></ul><h3>Other Resources</h3><ul><li><a href="tutorial-CODE_OF_CONDUCT.html">Code Of Conduct</a></li><li><a href="tutorial-CONTRIBUTING.html">Contributing</a></li><li><a href="tutorial-SECURITY.html">Security</a></li><li><a href="tutorial-development.html">Development</a></li><li><a href="tutorial-installation-and-examples.html">Installation & Examples</a></li></ul>
 </nav>
 
 <br class="clear">
